--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          cmd: latexmk
-          path: .
-          opts: -pdf test
-          packages: ffcode fvextra catchfile xstring framed environ upquote
+          opts: --verbose
