--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - run: |
+          echo "@misc{x, title={Hello, world!}, author={Bugayenko, Yegor}, year={2024}}" > test.bib
       - uses: ./
         with:
           opts: --verbose
