--- a/.rultor.yml
+++ b/.rultor.yml
@@ -24,8 +24,6 @@ docker:
   image: yegor256/rultor-image:1.23.1
 assets:
   docker-password: yegor256/home#assets/docker-password
-install: |
-  sudo make install clean "--directory=$(pwd)"
 merge:
   script: |-
     sudo docker build "$(pwd)"
@@ -40,6 +38,7 @@ release:
     git add Dockerfile
     git add action.yml
     git commit -m "version set to ${tag}"
+    make
     repo=yegor256/bibcop-action
     sudo docker build "$(pwd)" --tag "${repo}:${tag}"
     sudo docker build "$(pwd)" --tag "${repo}:latest"
