--- a/.rultor.yml
+++ b/.rultor.yml
@@ -38,7 +38,7 @@ release:
     git add Dockerfile
     git add action.yml
     git commit -m "version set to ${tag}"
-    make
+    sudo make "--directory=$(pwd)"
     repo=yegor256/bibcop-action
     sudo docker build "$(pwd)" --tag "${repo}:${tag}"
     sudo docker build "$(pwd)" --tag "${repo}:latest"
