--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
   color: orange
 runs:
   using: 'docker'
-  image: 'docker://yegor256/bibcop-action:latest'
+  image: 'docker://yegor256/bibcop-action:0.0.4'
 inputs:
   opts:
     description: 'Command-line options for the bibcop tool'
